رفع مشکلات نمایش در هاستینگ: اصلاح پیکربندی TailwindCSS CSS Nesting و i18n

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
