--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,37 @@ services:
     image: tailadmin:latest
     container_name: tailadmin
     restart: always
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
       - NEXT_PUBLIC_APP_URL=https://arp.ahmadi98.ir
+    networks:
+      - app-network
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:3000"]
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 5s 
+      start_period: 5s
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./public:/app/public
+      - ./.next/static:/app/.next/static
+    depends_on:
+      - app
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge 
