حذف تنظیمات مربوط به HTTPS و به‌روزرسانی پیکربندی nginx برای پروکسی Next.js. همچنین، حذف hostname از next.config.js.

--- a/nginx.conf
+++ b/nginx.conf
@@ -62,31 +62,12 @@ http {
         listen 80;
         server_name arp.ahmadi98.ir;
         
-        # Redirect all HTTP traffic to HTTPS
-        return 301 https://$host$request_uri;
-    }
-    
-    server {
-        listen 443 ssl;
-        server_name arp.ahmadi98.ir;
+        # فعلاً بدون ریدایرکت به HTTPS کار می‌کنیم
+        # return 301 https://$host$request_uri;
         
-        # SSL configuration
-        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:SSL:50m;
-        ssl_session_tickets off;
-        
-        # Modern configuration
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers off;
-        
-        # HSTS
-        add_header Strict-Transport-Security "max-age=63072000" always;
-        
-        # Proxy Next.js requests
+        # پروکسی Next.js
         location / {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://app:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -97,23 +78,23 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
         
-        # Static files
+        # فایل‌های استاتیک
         location /static/ {
             alias /app/.next/static/;
             expires 365d;
             add_header Cache-Control "public, max-age=31536000, immutable";
         }
         
-        # Public files
+        # فایل‌های عمومی
         location /public/ {
             alias /app/public/;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
         }
         
-        # Handle Next.js rewrites and static files
+        # پردازش بازنویسی‌های Next.js و فایل‌های استاتیک
         location /_next/ {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://app:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -122,4 +103,62 @@ http {
             add_header Cache-Control "public, max-age=31536000, immutable";
         }
     }
+    
+    # فعلاً سرور HTTPS را غیرفعال می‌کنیم
+    # server {
+    #     listen 443 ssl;
+    #     server_name arp.ahmadi98.ir;
+    #     
+    #     # SSL configuration
+    #     ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    #     ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    #     ssl_session_timeout 1d;
+    #     ssl_session_cache shared:SSL:50m;
+    #     ssl_session_tickets off;
+    #     
+    #     # Modern configuration
+    #     ssl_protocols TLSv1.2 TLSv1.3;
+    #     ssl_prefer_server_ciphers off;
+    #     
+    #     # HSTS
+    #     add_header Strict-Transport-Security "max-age=63072000" always;
+    #     
+    #     # Proxy Next.js requests
+    #     location / {
+    #         proxy_pass http://app:3000;
+    #         proxy_http_version 1.1;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection 'upgrade';
+    #         proxy_set_header Host $host;
+    #         proxy_cache_bypass $http_upgrade;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
+    #     
+    #     # Static files
+    #     location /static/ {
+    #         alias /app/.next/static/;
+    #         expires 365d;
+    #         add_header Cache-Control "public, max-age=31536000, immutable";
+    #     }
+    #     
+    #     # Public files
+    #     location /public/ {
+    #         alias /app/public/;
+    #         expires 30d;
+    #         add_header Cache-Control "public, max-age=2592000";
+    #     }
+    #     
+    #     # Handle Next.js rewrites and static files
+    #     location /_next/ {
+    #         proxy_pass http://app:3000;
+    #         proxy_http_version 1.1;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection 'upgrade';
+    #         proxy_set_header Host $host;
+    #         proxy_cache_bypass $http_upgrade;
+    #         add_header Cache-Control "public, max-age=31536000, immutable";
+    #     }
+    # }
 } 
