اضافه کردن متغیرهای محیطی جدید به docker-compose.yml، به‌روزرسانی پیکربندی next.config.js برای پشتیبانی از دامنه جدید و تنظیمات experimental، و بهبود پیکربندی nginx با افزایش محدودیت اندازه بدنه و زمان‌های تایم‌اوت پروکسی.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - NEXT_PUBLIC_APP_URL=https://arp.ahmadi98.ir
+      - NEXT_PUBLIC_SITE_URL=https://arp.ahmadi98.ir
+      - NEXT_PUBLIC_API_URL=https://arp.ahmadi98.ir/api
+      - NEXT_PUBLIC_BASE_PATH=
+    volumes:
+      - ./public:/app/public
     networks:
       - app-network
     healthcheck:
