--- a/nginx.conf
+++ b/nginx.conf
@@ -61,6 +61,7 @@ http {
     server {
         listen 80;
         server_name arp.ahmadi98.ir;
+        client_max_body_size 50M;
         
         # فعلاً بدون ریدایرکت به HTTPS کار می‌کنیم
         # return 301 https://$host$request_uri;
@@ -76,12 +77,15 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 300s;
         }
         
         # فایل‌های استاتیک
-        location /static/ {
+        location /_next/static/ {
             alias /app/.next/static/;
             expires 365d;
+            access_log off;
             add_header Cache-Control "public, max-age=31536000, immutable";
         }
         
@@ -89,18 +93,8 @@ http {
         location /public/ {
             alias /app/public/;
             expires 30d;
+            access_log off;
             add_header Cache-Control "public, max-age=2592000";
-        }
-        
-        # پردازش بازنویسی‌های Next.js و فایل‌های استاتیک
-        location /_next/ {
-            proxy_pass http://app:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            add_header Cache-Control "public, max-age=31536000, immutable";
         }
     }
     
