--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "node .next/standalone/server.js",
+    "start:next": "next start -p 3000",
     "start:linux": "next start -p ${PORT:-3000}",
     "lint": "next lint"
   },
